--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </section>
 
             <section id="bestSellers" class="page">
-                <div class="section-header centered"><h2 class="text-gradient">🔥 Hall of Fame</h2></div>
+                <div class="section-header centered"><h2 class="text-gradient"> Hall of Fame</h2></div>
                 <div id="bestSellersContainer"></div>
             </section>
 
@@ -283,3 +283,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
