--- a/index.html
+++ b/index.html
@@ -280,8 +280,9 @@
     </div>
 
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
 
 
