--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="receipt-paper">
             <div class="receipt-header"><h3>PurpleSip Café</h3><p>Premium Brewery & Kitchen</p></div>
             <div id="receiptItems"></div>
-            <div class="receipt-total-line"><span>---- --TOTAL AMOUNT-------</span><span id="receiptTotal"></span></div>
+            <div class="receipt-total-line"><span>----TOTAL AMOUNT-----</span><span id="receiptTotal"></span></div>
             <div class="receipt-footer">
                 <p>Transaction ID: <span id="receiptTransactionId"></span></p>
                 <p>Thank you for sipping!</p>
@@ -283,6 +283,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
